@@ -19,6 +19,7 @@
 			<label index="groupProfile_profileActions">Profile Actions</label>
 			<label index="privacy">Privacy</label>
 			<label index="editGroup">Edit group</label>
+			<label index="newGroup">New group</label>
 		</languageKey>
 	</data>
 </T3locallang>
