@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for the privacy application</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="newgroup_createNewGroup">Create new group</label>
+			<label index="newgroup_formSave">Create new group</label>
+			<label index="newgroup_title">Group title</label>
+			<label index="msg_create_error">error while creating group</label>
+		</languageKey>
+	</data>
+</T3locallang>
