@@ -1,0 +1,39 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Template for the privacy application</title>
+</head>
+<body>
+
+<!-- ###NEW_GROUP### begin -->
+<style>
+</style>
+<script>
+</script>
+<h2>###LLL:newgroup_createNewGroup###</h2>
+<div id="tx-community-newgroup">
+	<form action="###FORM.ACTION###" class="ajaxForm" method="post" enctype="multipart/form-data">
+		<dl>
+			<dt>###LLL:newgroup_title###</dt>
+			<dd><input type="text" name="tx_community[group_title]" value="" /></dd>
+		</dl>
+		<input type="submit" value="###LLL:newgroup_formSave###" />
+	</form>
+</div>
+<!-- ###NEW_GROUP### end -->
+
+<!-- ###NEW_GROUP_ERROR### begin -->
+<style>
+</style>
+<script>
+</script>
+<h2>###LLL:newgroup_createNewGroup###</h2>
+<div id="tx-community-newgroup">
+	<p>###MSG.MESSAGE###</p>
+</div>
+<!-- ###NEW_GROUP_ERROR### end -->
+
+</body>
+</html>
