@@ -40,6 +40,10 @@ plugin.tx_community {
 			templateFile = EXT:community/resources/templates/privacy/index.htm
 		}
 
+		newGroup {
+			templateFile = EXT:community/resources/templates/newgroup/index.htm
+		}
+
 		editGroup {
 			templateFile = EXT:community/resources/templates/editgroup/index.htm
 			defaultIcon = EXT:community/resources/icons/default_group.jpg
